fixed nav responsive design css and collapsing

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -1,4 +1,8 @@
 body {
-  padding-top: 40px;
-  padding-bottom: 60px;
+}
+@media (min-width: 979px) {
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
 }
